<resources>
    <string name="app_name">TigerHelp</string>

    <string name="input_phone_number">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="login_self">自动登录</string>
    <string name="reg">注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="code_register">请输入验证码</string>

    <string name="loading">正在加载中...</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="head">头像:</string>
    <string name="name">昵称:</string>
    <string name="baby_relation">与宝宝的关系:</string>
    <string name="address">详细地址:</string>
    <string name="reality_name">真实名字:</string>
    <string name="birthday">出生年月日:</string>
    <string name="personalized_signature">个性签名:</string>
    <string name="baby_name">宝宝昵称:</string>
    <string name="baby_name_reality">宝宝真实姓名:</string>
    <string name="baby_sex">宝宝性别:</string>
    <string name="baby_birthday">宝宝出生年月日:</string>
    <string name="baby_school">宝宝学校:</string>
    <string name="baby_class">宝宝班级:</string>
    <string name="baby_add">添加宝宝</string>
    <string name="apply_expert">申请达人</string>
    <string name="commit">提交</string>
    <string name="commit_sure">确定</string>
    <string name="name_hint">中英文数字符号</string>
    <string name="baby_hint">妈妈/爸爸/爷爷/奶奶/外公/外婆/(单选)</string>
    <string name="address_hint">小区号+楼号 住宅＋叠加别墅需记录的层号,室号</string>
    <string name="real_name_hint">中英文#输入后只能修改1次</string>
    <string name="birthday_hint">1978-05-09</string>
    <string name="signature">个性签名最多50个字</string>
    <string name="baby_name_hint">中英文符号</string>
    <string name="select_sex">男,女输入后只能修改1此</string>
    <string name="baby_birthday_hint">日期控件,输入后只能修改1次</string>
    <string name="baby_school_hint">请输入宝宝学校</string>
    <string name="baby_class_hint">请输入宝宝班级</string>
    <string name="take_photo">拍照</string>
    <string name="select_photo">从相册中选择</string>
    <string name="cancel">取消</string>
    <string name="residence_type">住宅类型:</string>
    <string name="villa">别墅</string>
    <string name="plot_address">小区地址:</string>
    <string name="floor">号楼</string>
    <string name="tier">层</string>
    <string name="room">室</string>
    <string name="house_number">门牌号</string>


</resources>
