<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/photograph_v"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center" >

        <TextView
            android:id="@+id/photograph_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/photos_v"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/white"
        android:gravity="center" >

        <TextView
            android:id="@+id/photos_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_photo"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cancel_v"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:background="@color/white"
        android:gravity="center" >

        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>