<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@mipmap/login_bg"
    android:gravity="center"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username_register"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="138dp"
        android:hint="@string/input_phone_number"
        android:background="@mipmap/login_input_text"
        android:textColorHint="@color/phone_number_login"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textSize="@dimen/margin_sixteen"
        android:drawablePadding="11dp"
        android:paddingLeft="12dp"
        android:paddingTop="3dp"
        android:drawableLeft="@mipmap/log_reg_user_ico"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/code_register"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_toLeftOf="@+id/getCode"
            android:hint="@string/code_register"
            android:background="@mipmap/login_input_text"
            android:textColorHint="@color/phone_number_login"
            android:textSize="@dimen/margin_sixteen"
            android:drawablePadding="13dp"
            android:paddingLeft="12dp"
            android:paddingTop="3dp"
            android:layout_marginTop="17dp"
            android:drawableLeft="@mipmap/log_reg_pwd_ico"
            />
       <ImageView
           android:id="@+id/getCode"
           android:layout_width="80dp"
           android:layout_height="57dp"
           android:layout_centerVertical="true"
           android:scaleType="fitXY"
           android:paddingTop="16.7dp"
           android:layout_alignParentRight="true"
           android:src="@mipmap/gain_code"
           />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:paddingTop="22dp"
            android:paddingLeft="12dp"
            android:paddingBottom="6dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="83dp"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="12dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:layout_marginRight="75dp"
            android:background="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_centerVertical="true"
            android:paddingTop="22dp"
            android:layout_alignParentRight="true"
            android:paddingBottom="6dp"
            android:layout_marginRight="12dp"
            android:textColor="@color/black"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@mipmap/reg_bt"
        android:textSize="@dimen/margin_twenty"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:text="@string/reg"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        />
</LinearLayout>