<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#f6f7fb"
    android:layout_height="match_parent">

    <include layout="@layout/in_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_marginTop="@dimen/margin_fifteen"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start"
            style="@style/Start_Person"
            />
        <TextView
           style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start"
            android:text="@string/head"
            />
        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/my_head_icon"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/zhonghuise"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start_2"
            style="@style/Start_Person"
            />
        <TextView
            style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start_2"
            android:text="@string/name"
            />
        <EditText
            android:id="@+id/name_et"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/zhonghuise"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start_3"
            style="@style/Start_Person"
            />
        <TextView
            style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start_3"
            android:text="@string/baby_relation"
            />
        <EditText
            android:id="@+id/baby_et"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/zhonghuise"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start_4"
            style="@style/Start_Person"
            />
        <TextView
            style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start_4"
            android:text="@string/address"
            />
        <EditText
            android:id="@+id/address_et"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/zhonghuise"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start_5"
            style="@style/Start_Person"
            />
        <TextView
            style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start_5"
            android:text="@string/reality_name"
            />
        <EditText
            android:id="@+id/realityName_et"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/zhonghuise"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <TextView
            style="@style/Text_Name_Person"
            android:text="@string/birthday"
            />
        <EditText
            android:id="@+id/birthday_et"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/zhonghuise"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="60dp">
        <TextView
            style="@style/Text_Name_Person"
            android:text="@string/personalized_signature"
            android:paddingBottom="22dp"
            />
        <EditText
            android:id="@+id/personalized_signature"
            android:paddingBottom="22dp"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:layout_marginTop="15dp"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start_6"
            style="@style/Start_Person"
            />
        <TextView
            style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start_6"
            android:text="@string/baby_name"
            />
        <EditText
            android:id="@+id/baby_name"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/zhonghuise"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start_7"
            style="@style/Start_Person"
            />
        <TextView
            style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start_7"
            android:text="@string/baby_name_reality"
            />
        <EditText
            android:id="@+id/baby_name_reality"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/zhonghuise"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start_8"
            style="@style/Start_Person"
            />
        <TextView
            style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start_8"
            android:text="@string/baby_sex"
            />
        <EditText
            android:id="@+id/baby_sex"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/zhonghuise"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start_9"
            style="@style/Start_Person"
            />
        <TextView
            style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start_9"
            android:text="@string/baby_birthday"
            />
        <EditText
            android:id="@+id/baby_birthday"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/zhonghuise"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start_10"
            style="@style/Start_Person"
            />
        <TextView
            style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start_10"
            android:text="@string/baby_school"
            />
        <EditText
            android:id="@+id/baby_school"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/zhonghuise"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start_11"
            style="@style/Start_Person"
            />
        <TextView
            style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start_11"
            android:text="@string/baby_class"
            />
        <EditText
            android:id="@+id/baby_class"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:layout_marginTop="15dp"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/start_12"
            style="@style/Start_Person"
            />
        <TextView
            android:id="@+id/baby_add_tv"
            style="@style/Text_Name_Person"
            android:layout_toRightOf="@+id/start_12"
            android:textColor="#2e3844"
            android:text="@string/baby_add"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/baby_add_tv"
            android:layout_marginLeft="6dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/add_icon"
            />
        <EditText
            android:id="@+id/baby_add"
            style="@style/Text_Name_Person_Value"
            android:text="你好"
            />
    </RelativeLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_forty"
        android:text="提示 “*”为必填选项"
        android:textColor="@color/red"
        android:paddingLeft="@dimen/margin_ten"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:paddingRight="@dimen/margin_ten"
        android:textSize="@dimen/dp_14"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_ten"
        android:paddingRight="@dimen/margin_ten"
        android:layout_height="40dp">
        <TextView
            style="@style/Text_Name_Person"
            android:text="@string/apply_expert"
            />
        <TextView
            android:id="@+id/apply_expert"
            style="@style/Text_Name_Person_Value"
            android:text="待审核"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_twenty"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_right"
            android:layout_marginRight="@dimen/margin_fifteen"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
</LinearLayout>