<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/head"
        layout="@layout/in_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
      android:id="@+id/address_show"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:layout_below="@+id/head"
      android:text="上海市浦东新区"
      android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
      android:layout_margin="@dimen/dp_10"
      />

    <TextView
        android:id="@+id/residence_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/residence_type"
        android:textSize="@dimen/sp_16"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_below="@+id/address_show"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        />


    <LinearLayout
        android:id="@+id/common_residence_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/residence_type"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_below="@+id/address_show"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:text="普通住宅"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/margin_ten"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitXY"
            android:src="@mipmap/login_check_box_view"
            />
        <ImageView
            android:id="@+id/common_residence"
            android:layout_width="15dp"
            android:layout_height="18dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:src="@mipmap/login_check_box"
            />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/villa_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/common_residence_ly"
        android:layout_marginLeft="@dimen/margin_twenty"
        android:layout_below="@+id/address_show"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:text="@string/villa"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/margin_ten"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:src="@mipmap/login_check_box_view"
                />
            <ImageView
                android:id="@+id/villa"
                android:layout_width="15dp"
                android:layout_height="18dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:src="@mipmap/login_check_box"
                />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/plot_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/villa_ly"
        android:layout_marginTop="@dimen/margin_ten"
        android:layout_marginLeft="@dimen/dp_10"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="@dimen/sp_16"
            android:text="@string/plot_address"
            />

        <EditText
            android:id="@+id/plot_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/input_plot_address"
            android:layout_marginRight="@dimen/dp_14"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/room_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_ten"
        android:layout_marginLeft="@dimen/dp_78"
        android:layout_below="@+id/plot_ly"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/number_floor"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_25"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/input_plot_address"
            android:layout_marginRight="@dimen/dp_6"
            />

        <TextView
            android:id="@+id/number_floor_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/floor"
            />
        <EditText
            android:id="@+id/which_floor"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_25"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/input_plot_address"
            android:layout_marginRight="@dimen/dp_6"
            />

        <TextView
            android:id="@+id/which_floor_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/tier"
            />
        <EditText
            android:id="@+id/number_room"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_25"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/input_plot_address"
            android:layout_marginRight="@dimen/dp_6"
            />

        <TextView
            android:id="@+id/number_room_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/room"
            />
        <TextView
            android:id="@+id/number_room_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:visibility="gone"
            android:text="@string/house_number"
            />
    </LinearLayout>
  <TextView
      android:id="@+id/commit_sure"
      android:layout_width="match_parent"
      android:layout_height="@dimen/margin_forty"
      android:text="@string/commit_sure"
      android:layout_below="@+id/room_ly"
      android:layout_marginTop="@dimen/dp_30"
      android:layout_marginRight="@dimen/dp_21"
      android:layout_marginLeft="@dimen/dp_21"
      android:gravity="center"
      android:textColor="@color/black"
      android:textSize="@dimen/sp_15"
      android:background="@mipmap/button_yellow"
      />
</RelativeLayout>